# LLM-Evaluation-Harness

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: regression.yml  release.yml  test.yml
src/llm_eval/: __init__.py  __main__.py  api.py  cli.py  config.py  db.py  evaluator.py  executor.py  logging.py  metrics.py  models.py  schemas.py
tests/: conftest.py  test_api.py  test_metrics.py  test_schemas.py
