[project]
name = "llm-eval"
version = "0.1.0"
description = "LLM evaluation harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "tenacity>=8.2.0",
  "redis>=5.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "plotly>=5.22.0",
  "pdfkit>=1.0.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "sentry-sdk>=2.5.0",
  "structlog>=24.1.0",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "mypy>=1.8.0",
  "pylint>=3.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
llm-eval = "llm_eval.cli:app"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_unreachable = true
pretty = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.MASTER]
load-plugins = ["pylint.extensions.mccabe"]

[tool.pylint.FORMAT]
max-line-length = 100
